--- a/develop.html
+++ b/develop.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>ZipHttpd ガイド - ドキュメント開発</title>
-		<link rel="stylesheet" type="text/css" href="css/common.css">
-		<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
-		<script src="highlight/highlight.pack.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'ja', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script>
 
-		<script src="js/util.js"></script>
-<script>
-// TODO: fetch API を使うべき？
-wget("toc.json").then(info => {
-	const result = info.result;
-	const holder = document.getElementById("toc");
-	const tocsobj = JSON.parse(result);
-//	alert(result + location.pathname);
-	const base = location.pathname.split('/', 4).join('/') + '/';
-	if (document.readyState === 'loading') {
-		window.addEventListener('DOMContentLoaded', e => {
-			createToc(holder, tocsobj, base);
+<head>
+	<meta charset="UTF-8">
+	<title>ZipHttpd ガイド - ドキュメント開発</title>
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
+	<script src="highlight/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'ja',layout: google.translate.TranslateElement.InlineLayout.SIMPLE},'google_translate_element');
+		}
+	</script>
+
+	<script src="js/util.js"></script>
+	<script>
+		// TODO: fetch API を使うべき？
+		wget("toc.json").then(info => {
+			const result=info.result;
+			const holder=document.getElementById("toc");
+			const tocsobj=JSON.parse(result);
+			//	alert(result + location.pathname);
+			const base=location.pathname.split('/',4).join('/')+'/';
+			if(document.readyState==='loading') {
+				window.addEventListener('DOMContentLoaded',e => {
+					createToc(holder,tocsobj,base);
+				});
+			} else {
+				createToc(holder,tocsobj,base);
+			}
+		}).catch(info => {
+			console.log(info.result);
 		});
-	} else {
-		createToc(holder, tocsobj, base);
-	}
-}).catch(info => {
-	console.log(info.result);
-});
 
-</script>
+	</script>
 
-	</head>
-	<body>
-<div id="side">
-	<div class="title">
-		<img class="minilogo" src="img/ZipHttpd.svg"/>
-		&nbsp;ZipHttpd<br>
-		&nbsp;ガイドブック<br>
+</head>
+
+<body>
+	<div id="side">
+		<div class="title">
+			<img class="minilogo" src="img/ZipHttpd.svg" />
+			&nbsp;ZipHttpd<br>
+			&nbsp;ガイドブック<br>
+		</div>
+		<div class="version">ver 0.02&nbsp;(2020/12)</div>
+		<hr class="isohr" />
+
+		<div id="toc">目次<br></div>
+
+		<hr class="isohr" />
+		<div id="google_translate_element"></div>
+
 	</div>
-	<div class="version">ver 0.02&nbsp;(2020/12)</div>
-	<hr class="isohr"/>
-
-	<div id="toc">目次<br></div>
-
-	<hr class="isohr"/>
-	<div id="google_translate_element"></div>
-
-</div>
-<div id="main">
+	<div id="main">
 
 		<h1>ドキュメント開発</h1>
 		<a name="develop"></a>
@@ -152,11 +155,13 @@ wget("toc.json").then(info => {
 					ここで入力するパスワードは基準フォルダの password.json ファイルにホスト別に設定しておきます。<br>
 				</p>
 
-<div class="half">password.json の例<pre><code class="json">{
+				<div class="half">password.json の例
+					<pre><code class="json">{
     "localstorage.com": {"password": "pass", "localstorage": true},
     "xxxx.com": {"password": "pass"}
 }
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
 					攻撃者がパスワードを参照できるためには、ファイルを自由に参照できている必要があります。<br>
@@ -167,10 +172,10 @@ wget("toc.json").then(info => {
 
 			<a name="session"></a>
 			<h3>セッション管理</h3>
-				<p class="ind1em">
-					<a target="new" href="js/zhapi.js">zhapi.js</a> で実装されていますので、利用において気にする必要はありません。<br>
-					この項は、セキュリティ保持のメカニズムをレビューする場合のガイドです。<br>
-				</p>
+			<p class="ind1em">
+				<a target="new" href="js/zhapi.js">zhapi.js</a> で実装されていますので、利用において気にする必要はありません。<br>
+				この項は、セキュリティ保持のメカニズムをレビューする場合のガイドです。<br>
+			</p>
 
 			<div class="ind1em">
 
@@ -184,10 +189,13 @@ wget("toc.json").then(info => {
 				<h4>基本的事項</h4>
 				<p class="ind1em">
 					ドキュメントの所属するホストごとに異なるポートを使用します。<br>
-					別<a target="new" href="https://developer.mozilla.org/ja/docs/Web/Security/Same-origin_policy#Definition_of_an_origin">オリジン</a>に属するページからの WebAPI の実行は、無条件で失敗します。<br>
+					別<a target="new"
+						href="https://developer.mozilla.org/ja/docs/Web/Security/Same-origin_policy#Definition_of_an_origin">オリジン</a>に属するページからの
+					WebAPI の実行は、無条件で失敗します。<br>
 				</p>
 				<p class="append">
-					<a target="new" href="https://developer.mozilla.org/ja/docs/Glossary/CORS">CORS</a>に従い、プリフライト（厳密には POST 以外の全て）に対して単純にエラーを返しているからです。<br>
+					<a target="new" href="https://developer.mozilla.org/ja/docs/Glossary/CORS">CORS</a>に従い、プリフライト（厳密には
+					POST 以外の全て）に対して単純にエラーを返しているからです。<br>
 				</p>
 
 				<p class="ind1em">
@@ -205,11 +213,13 @@ wget("toc.json").then(info => {
 					<a target="new" href="js/zhapi.js">zhapi.js</a> を読み込むと、トークンが取得されていない場合には、ログインページに自動遷移します。<br>
 				</p>
 
-<div class="half">チェック部分 (<a target="new" href="js/zhapi.js">zhapi.js</a>)<pre><code class="js">(function() {
+				<div class="half">チェック部分 (<a target="new" href="js/zhapi.js">zhapi.js</a>)
+					<pre><code class="js">(function() {
     const zh = new ZHAPI('auto');
     zh.Noop().then(function(info) {}).catch(function(error) {});
 })();
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<h4>ログイン結果</h4>
 				<p class="ind1em">
@@ -217,7 +227,8 @@ wget("toc.json").then(info => {
 					ページのデータとしてトークンが設定されていた場合、トークンを記録して元々の URL に自動的に遷移します。<br>
 				</p>
 
-<div class="half">/login でのトークン記録処理部分 (loginHandler.go)<pre><code class="js">        document.addEventListener("DOMContentLoaded", function() {
+				<div class="half">/login でのトークン記録処理部分 (loginHandler.go)
+					<pre><code class="js">        document.addEventListener("DOMContentLoaded", function() {
             let token = "{{.Token}}";
             window['localStorage'].removeItem('token')
             window['sessionStorage'].removeItem('token')
@@ -228,15 +239,18 @@ wget("toc.json").then(info => {
                 document.all.item("ad").src = "{{.AdURL}}";
             }
         });
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
-					CSRF トークンの保存には Cookie ではなく<a target="new" href="https://developer.mozilla.org/ja/docs/Web/API/Window/sessionStorage">セッションストレージ</a>を利用します。<br>
+					CSRF トークンの保存には Cookie ではなく<a target="new"
+						href="https://developer.mozilla.org/ja/docs/Web/API/Window/sessionStorage">セッションストレージ</a>を利用します。<br>
 					Cookie はポート番号を区別しないため、別オリジンのドキュメントからでも参照できてしまうからです。<br>
 					ストレージ API ならばポート番号が異なる別オリジンのドキュメントでは参照できません。<br>
 				</p>
 				<p class="append">
-					この保存場所は設定で<a target="newpage" href="https://developer.mozilla.org/ja/docs/Web/API/Window/localStorage">ローカルストレージ</a>を使用することもできますが、保持期間が永続的であることには留意してください。<br>
+					この保存場所は設定で<a target="newpage"
+						href="https://developer.mozilla.org/ja/docs/Web/API/Window/localStorage">ローカルストレージ</a>を使用することもできますが、保持期間が永続的であることには留意してください。<br>
 					杞憂ではありますが、何らかの方法でオリジンを誤魔化す脆弱性があった場合など、トークンが漏洩する危険性が増します。<br>
 					そのため、上記の例でのxxxx.comホストのように無指定である場合には、セッションストレージを使用します。<br>
 				</p>
@@ -245,8 +259,9 @@ wget("toc.json").then(info => {
 
 		</div>
 
-		<hr/>
+		<hr />
 		copyright ZipHttpd.com 2020<br>
-</div>
-	</body>
+	</div>
+</body>
+
 </html>
