--- a/document.html
+++ b/document.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>ZipHttpd ガイド - ドキュメント</title>
-		<link rel="stylesheet" type="text/css" href="css/common.css">
-		<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
-		<script src="highlight/highlight.pack.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'ja', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script>
 
-		<script src="js/util.js"></script>
-<script>
-// TODO: fetch API を使うべき？
-wget("toc.json").then(info => {
-	const result = info.result;
-	const holder = document.getElementById("toc");
-	const tocsobj = JSON.parse(result);
-//	alert(result + location.pathname);
-	const base = location.pathname.split('/', 4).join('/') + '/';
-	if (document.readyState === 'loading') {
-		window.addEventListener('DOMContentLoaded', e => {
-			createToc(holder, tocsobj, base);
+<head>
+	<meta charset="UTF-8">
+	<title>ZipHttpd ガイド - ドキュメント</title>
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
+	<script src="highlight/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'ja',layout: google.translate.TranslateElement.InlineLayout.SIMPLE},'google_translate_element');
+		}
+	</script>
+
+	<script src="js/util.js"></script>
+	<script>
+		// TODO: fetch API を使うべき？
+		wget("toc.json").then(info => {
+			const result=info.result;
+			const holder=document.getElementById("toc");
+			const tocsobj=JSON.parse(result);
+			//	alert(result + location.pathname);
+			const base=location.pathname.split('/',4).join('/')+'/';
+			if(document.readyState==='loading') {
+				window.addEventListener('DOMContentLoaded',e => {
+					createToc(holder,tocsobj,base);
+				});
+			} else {
+				createToc(holder,tocsobj,base);
+			}
+		}).catch(info => {
+			console.log(info.result);
 		});
-	} else {
-		createToc(holder, tocsobj, base);
-	}
-}).catch(info => {
-	console.log(info.result);
-});
 
-</script>
+	</script>
 
-	</head>
-	<body>
-<div id="side">
-	<div class="title">
-		<img class="minilogo" src="img/ZipHttpd.svg"/>
-		&nbsp;ZipHttpd<br>
-		&nbsp;ガイドブック<br>
+</head>
+
+<body>
+	<div id="side">
+		<div class="title">
+			<img class="minilogo" src="img/ZipHttpd.svg" />
+			&nbsp;ZipHttpd<br>
+			&nbsp;ガイドブック<br>
+		</div>
+		<div class="version">ver 0.02&nbsp;(2020/12)</div>
+		<hr class="isohr" />
+
+		<div id="toc">目次<br></div>
+
+		<hr class="isohr" />
+		<div id="google_translate_element"></div>
+
 	</div>
-	<div class="version">ver 0.02&nbsp;(2020/12)</div>
-	<hr class="isohr"/>
-
-	<div id="toc">目次<br></div>
-
-	<hr class="isohr"/>
-	<div id="google_translate_element"></div>
-
-</div>
-<div id="main">
+	<div id="main">
 		<a name="document"></a>
 		<h1>ドキュメント</h1>
 
@@ -99,14 +102,17 @@ wget("toc.json").then(info => {
 				外部アプリから特定のドキュメントを開く時には、代表ポート 8823 を用いてください。<br>
 			</p>
 
-<div class="half">ヘルプ表示の例<pre><code class="cs">var URL = "http://localhost:8823/ホスト/グループ/ドキュメント/index.html#トピック";
+			<div class="half">ヘルプ表示の例
+				<pre><code class="cs">var URL = "http://localhost:8823/ホスト/グループ/ドキュメント/index.html#トピック";
 System.Diagnostics.Process.Start(URL);<br>
-</code></pre></div>
+</code></pre>
+			</div>
 
 		</div>
 
-		<hr/>
+		<hr />
 		copyright ZipHttpd.com 2020<br>
-</div>
-	</body>
+	</div>
+</body>
+
 </html>
