--- a/guide.html
+++ b/guide.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>ZipHttpd ガイド - トップ</title>
-		<link rel="stylesheet" type="text/css" href="css/common.css">
-		<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
-		<script src="highlight/highlight.pack.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'ja', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script>
 
-		<script src="js/util.js"></script>
-<script>
-// TODO: fetch API を使うべき？
-wget("toc.json").then(info => {
-	const result = info.result;
-	const holder = document.getElementById("toc");
-	const tocsobj = JSON.parse(result);
-//	alert(result + location.pathname);
-	const base = location.pathname.split('/', 4).join('/') + '/';
-	if (document.readyState === 'loading') {
-		window.addEventListener('DOMContentLoaded', e => {
-			createToc(holder, tocsobj, base);
+<head>
+	<meta charset="UTF-8">
+	<title>ZipHttpd ガイド - トップ</title>
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
+	<script src="highlight/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'ja',layout: google.translate.TranslateElement.InlineLayout.SIMPLE},'google_translate_element');
+		}
+	</script>
+
+	<script src="js/util.js"></script>
+	<script>
+		// TODO: fetch API を使うべき？
+		wget("toc.json").then(info => {
+			const result=info.result;
+			const holder=document.getElementById("toc");
+			const tocsobj=JSON.parse(result);
+			//	alert(result + location.pathname);
+			const base=location.pathname.split('/',4).join('/')+'/';
+			if(document.readyState==='loading') {
+				window.addEventListener('DOMContentLoaded',e => {
+					createToc(holder,tocsobj,base);
+				});
+			} else {
+				createToc(holder,tocsobj,base);
+			}
+		}).catch(info => {
+			console.log(info.result);
 		});
-	} else {
-		createToc(holder, tocsobj, base);
-	}
-}).catch(info => {
-	console.log(info.result);
-});
-</script>
+	</script>
 
-	</head>
-	<body>
-<div id="side">
-	<div class="title">
-		<img class="minilogo" src="img/ZipHttpd.svg"/>
-		&nbsp;ZipHttpd<br>
-		&nbsp;ガイドブック<br>
+</head>
+
+<body>
+	<div id="side">
+		<div class="title">
+			<img class="minilogo" src="img/ZipHttpd.svg" />
+			&nbsp;ZipHttpd<br>
+			&nbsp;ガイドブック<br>
+		</div>
+		<div class="version">ver 0.02&nbsp;(2020/12)</div>
+		<hr class="isohr" />
+
+		<div id="toc">目次<br></div>
+
+		<hr class="isohr" />
+		<div id="google_translate_element"></div>
+
 	</div>
-	<div class="version">ver 0.02&nbsp;(2020/12)</div>
-	<hr class="isohr"/>
-
-	<div id="toc">目次<br></div>
-
-	<hr class="isohr"/>
-	<div id="google_translate_element"></div>
-
-</div>
-<div id="main">
+	<div id="main">
 		<a name="use"></a>
 		<h2>利用ガイド</h2>
 		<div class="ind30px">
@@ -67,14 +70,16 @@ wget("toc.json").then(info => {
 					任意のディレクトリにファイルを置きます。<br>
 				</p>
 
-<div class="half">実行前のファイル構成<pre><code class="text">D:\.ziphttpd&gt;tree . /F
+				<div class="half">実行前のファイル構成
+					<pre><code class="text">D:\.ziphttpd&gt;tree . /F
 D:\.ZIPHTTPD
 │  ziphttpd.exe
 │  launcher.exe
 │
 └─docs
         prototype.zip
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="append">
 					launchar.exe は Windows のサポートアプリ(.Net)です。<br>
@@ -88,18 +93,21 @@ D:\.ZIPHTTPD
 					quit とコマンドを入力すると終了します。<br>
 				</p>
 
-<div class="half">実行例<pre><code class="text">D:\.ziphttpd&gt;ziphttpd
+				<div class="half">実行例
+					<pre><code class="text">D:\.ziphttpd&gt;ziphttpd
 directory : D:\.ziphttpd
 quit
 
 D:\.ziphttpd&gt;
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
 					実行により以下のようなファイル構成が生成されます。<br>
 				</p>
 
-<div class="half">実行後のファイル構成<pre><code class="text">D:\.ziphttpd&gt;tree . /F
+				<div class="half">実行後のファイル構成
+					<pre><code class="text">D:\.ziphttpd&gt;tree . /F
 D:\.ZIPHTTPD
 │  ziphttpd.exe
 │  launcher.exe
@@ -119,7 +127,8 @@ D:\.ZIPHTTPD
 ├─api
 │  └─prototype.com
 └─system
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<h4>コマンドライン</h4>
 				<p class="ind1em">
@@ -127,7 +136,8 @@ D:\.ZIPHTTPD
 				</p>
 
 
-<div class="half">コマンドラインヘルプ<pre><code class="text">D:\.ziphttpd&gt; ziphttpd -h
+				<div class="half">コマンドラインヘルプ
+					<pre><code class="text">D:\.ziphttpd&gt; ziphttpd -h
 Usage of ziphttpd:
   -config string
         configuration directory
@@ -137,7 +147,8 @@ Usage of ziphttpd:
         logging directory
   -port int
         listen port (default 8823)
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
 				</p>
@@ -175,7 +186,8 @@ Usage of ziphttpd:
 					基準ディレクトリの下の log を使用しますが、実行時引数 -log で特定ディレクトリを指定できます。<br>
 					/var/log 以下にログを出力させたい場合に指定します。<br>
 				</p>
-<div class="half">ログ<pre><code class="text">2020/05/26 03:18:07 C:/xorvercom/ziphttpd/cmd/main.go:50: [INFO] ---- server start ----
+				<div class="half">ログ
+					<pre><code class="text">2020/05/26 03:18:07 C:/xorvercom/ziphttpd/cmd/main.go:50: [INFO] ---- server start ----
 2020/05/26 03:18:07 C:/xorvercom/ziphttpd/cmd/internal/httpd/server.go:35: [INFO] create server:prototype.com
 2020/05/26 03:18:07 C:/xorvercom/ziphttpd/cmd/internal/httpd/server.go:48: [INFO] run server:prototype.com, port:58823
 2020/05/26 03:18:07 C:/xorvercom/ziphttpd/cmd/internal/httpd/server.go:35: [INFO] create server:system
@@ -184,7 +196,8 @@ Usage of ziphttpd:
 2020/05/26 03:18:10 C:/xorvercom/ziphttpd/cmd/main.go:73: [INFO] signal: interrupt
 2020/05/26 03:18:10 C:/xorvercom/ziphttpd/cmd/internal/httpd/server.go:65: [WARN] server:system : accept tcp [::]:8823: use of closed network connection
 2020/05/26 03:18:10 C:/xorvercom/ziphttpd/cmd/internal/httpd/server.go:65: [WARN] server:prototype.com : accept tcp [::]:58823: use of closed network connection
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
 					ローテーションなどは行いませんので、定期的に削除してください。<br>
@@ -231,7 +244,8 @@ Usage of ziphttpd:
 					ziphttpd.json という固定の名称のファイルです。<br>
 				</p>
 
-<div class="half">ziphttpd.json の例<pre><code class="json">{
+				<div class="half">ziphttpd.json の例
+					<pre><code class="json">{
     "contenttype": {
         "html,htm": "text/html",
         "js": "text/javascript",
@@ -249,7 +263,8 @@ Usage of ziphttpd:
     },
     "endterminator": null
 }
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<a name="zhd"></a>
 				<h4>ドキュメントファイル</h4>
@@ -268,22 +283,58 @@ Usage of ziphttpd:
 					その場合に、文字コードや初期表示ページを設定することでより便利に使えます。<br>
 				</p>
 
-<div class="half">ドキュメント設定ファイルの例<pre><code class="json">{
+				<div class="half">ドキュメント設定ファイルの例
+					<pre><code class="json">{
     "name": "任意の名称",
     "path": "ファイル.zip",
 }
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
-					<table class="std">
-						<tr><th>キー</th><th>デフォルト</th><th>機能</th><th>その他</th></tr>
-						<tr><td>path</td><td>zip ファイル名</td><td>zip ファイル名</td><td>絶対パスで記述可能。</td></tr>
-						<tr><td>docgroup</td><td>"common"</td><td>ドキュメントグループ名</td><td rowspan="2">トップページに表示されます。<br>またURLパスの先頭に使用されます。</td></tr>
-						<tr><td>name</td><td>zip ベース名</td><td>ドキュメント名<br></td></tr>
-						<tr><td>contentencoding</td><td>"utf-8"</td><td>Content-Encoding</td><td>テキストの文字エンコーディングです。</td></tr>
-						<tr><td>contenttype</td><td>なし</td><td>Content-Type</td><td>拡張子別の MIME タイプを記述します。<br>指定しない場合、ZipHttpd 設定ファイルを参照します。</td></tr>
-						<tr><td>host</td><td>なし</td><td>配布元のホスト名</td><td>将来的に署名や更新で使用します。<a href="#ドキュメントグループ署名">→ 参照</a></td></tr>
-					</table>
+				<table class="std">
+					<tr>
+						<th>キー</th>
+						<th>デフォルト</th>
+						<th>機能</th>
+						<th>その他</th>
+					</tr>
+					<tr>
+						<td>path</td>
+						<td>zip ファイル名</td>
+						<td>zip ファイル名</td>
+						<td>絶対パスで記述可能。</td>
+					</tr>
+					<tr>
+						<td>docgroup</td>
+						<td>"common"</td>
+						<td>ドキュメントグループ名</td>
+						<td rowspan="2">トップページに表示されます。<br>またURLパスの先頭に使用されます。</td>
+					</tr>
+					<tr>
+						<td>name</td>
+						<td>zip ベース名</td>
+						<td>ドキュメント名<br></td>
+					</tr>
+					<tr>
+						<td>contentencoding</td>
+						<td>"utf-8"</td>
+						<td>Content-Encoding</td>
+						<td>テキストの文字エンコーディングです。</td>
+					</tr>
+					<tr>
+						<td>contenttype</td>
+						<td>なし</td>
+						<td>Content-Type</td>
+						<td>拡張子別の MIME タイプを記述します。<br>指定しない場合、ZipHttpd 設定ファイルを参照します。</td>
+					</tr>
+					<tr>
+						<td>host</td>
+						<td>なし</td>
+						<td>配布元のホスト名</td>
+						<td>将来的に署名や更新で使用します。<a href="#ドキュメントグループ署名">→ 参照</a></td>
+					</tr>
+				</table>
 				</p>
 				<p class="append">
 					同じドキュメントグループ名で同じドキュメント名を持つドキュメントが存在した場合、動作は不定です。<br>
@@ -295,7 +346,8 @@ Usage of ziphttpd:
 					ドキュメントファイル内に入れておく ziphttpd/config.json という固定の名称のファイルです。<br>
 				</p>
 
-<div class="half">docs/prototype.zip/ziphttpd/config.json<pre><code class="json">{
+				<div class="half">docs/prototype.zip/ziphttpd/config.json
+					<pre><code class="json">{
     "name": "prototype",
     "docgroup": "prototype.com",
     "host": "prototype.com",
@@ -310,13 +362,15 @@ Usage of ziphttpd:
     },
     "usestaticfiles": true
 }
-</code></pre></div>
+</code></pre>
+				</div>
 
 				<p class="ind1em">
 					参考例に対応したドキュメントの設定ファイルは以下のように自動設定されます。<br>
 				</p>
 
-<div class="half">docs/prototype.json<pre><code class="json">{
+				<div class="half">docs/prototype.json
+					<pre><code class="json">{
     "contentencoding": "utf-8",
     "contenttype": {
         "css": "text/css",
@@ -333,13 +387,15 @@ Usage of ziphttpd:
     "path": "prototype.zip",
     "usestaticfiles": true
 }
-</code></pre></div>
+</code></pre>
+				</div>
 
+			</div>
+
+			<hr />
+			copyright ZipHttpd.com 2020<br>
 		</div>
-
-		<hr/>
-		copyright ZipHttpd.com 2020<br>
 	</div>
-</div>
 </body>
+
 </html>
