--- a/guide.html
+++ b/guide.html
@@ -3,40 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ZipHttpd ガイド - トップ</title>
+	<title>ZipHttpd ガイド - 利用ガイド</title>
 	<link rel="stylesheet" type="text/css" href="css/common.css">
 	<link rel="stylesheet" type="text/css" href="highlight/a11y-dark.css">
 	<script src="highlight/highlight.pack.js"></script>
-	<script>hljs.initHighlightingOnLoad();</script>
 	<script type="text/javascript"
 		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-	<script type="text/javascript">
-		function googleTranslateElementInit() {
-			new google.translate.TranslateElement({pageLanguage: 'ja',layout: google.translate.TranslateElement.InlineLayout.SIMPLE},'google_translate_element');
-		}
-	</script>
-
 	<script src="js/util.js"></script>
-	<script>
-		// TODO: fetch API を使うべき？
-		wget("toc.json").then(info => {
-			const result=info.result;
-			const holder=document.getElementById("toc");
-			const tocsobj=JSON.parse(result);
-			//	alert(result + location.pathname);
-			const base=location.pathname.split('/',4).join('/')+'/';
-			if(document.readyState==='loading') {
-				window.addEventListener('DOMContentLoaded',e => {
-					createToc(holder,tocsobj,base);
-				});
-			} else {
-				createToc(holder,tocsobj,base);
-			}
-		}).catch(info => {
-			console.log(info.result);
-		});
-	</script>
-
+	<script src="js/side.js"></script>
 </head>
 
 <body>
